сделал базовый функционал бота

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=vinchik_bot
+bot.name=give_vinchik_v2_bot
+bot.token=6477054808:AAESiUn01J6rT7kSYWJAUYurIfp4T24XWJQ
+
+
+#db related settings
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/bot_database
+spring.datasource.username=root
+spring.datasource.password=testtest
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=prg.hibernate.dialect.MySQL8Dialect
+
